clusters/prod-cluster/organizations/numinia/atlantis-library/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hyperfy2-numinia-atlantis-library-deployment
  namespace: numinia
  labels:
    environment: pro
    app: atlantis-library
    pod-type: hyperfy2-numinia-atlantis-library
  annotations:
    keda.sh/auto-scaling: "enabled"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlantis-library
      environment: pro
      pod-type: hyperfy2-numinia-atlantis-library
  template:
    metadata:
      labels:
        app: atlantis-library
        environment: pro
        pod-type: hyperfy2-numinia-atlantis-library
    spec:
      serviceAccountName: aws-secret-manager-sa
      volumes:
        - name: hyperfy2-persistent-storage
          persistentVolumeClaim:
            claimName: numinia-shared-pvc
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: hyperfy2-numinia-atlantis-library-aws-secrets
      containers:
        - name: hyperfy2-numinia-atlantis-library
          image: ghcr.io/numengames/numinia-hyperfy2:sha-119b8a4d1e3238aa4de6eada97100d48833f1e78
          volumeMounts:
            - name: hyperfy2-persistent-storage
              mountPath: /mnt/hyperfy2-persistent-storage
              subPath: atlantis-library
            - name: secrets-store
              mountPath: "/mnt/secrets-store"
              readOnly: true
          resources:
            requests:
              memory: ${MEMORY}
              cpu: ${CPU}
            limits:
              memory: ${LIMITS_MEMORY}
              cpu: ${LIMITS_CPU}
