clusters/prod-cluster/organizations/numinia/atlantis-library/base/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hyperfy2-numinia-atlantis-library-route
  namespace: numinia
spec:
  entryPoints:
    - websecure
  routes:
    - match: "Host(`atlantis-library.numinia.xyz`)"
      kind: Rule
      services:
        - name: "hyperfy2-numinia-atlantis-library-service"
          port: 3000

  tls:
    secretName: numinia-tls
